# practice

./: README.md
HelloAPP/: meson.build  org.gnome.Helloapp.json
HelloAPP/data/: meson.build  org.gnome.Helloapp.appdata.xml.in  org.gnome.Helloapp.desktop.in  org.gnome.Helloapp.gschema.xml
HelloAPP/po/: POTFILES  meson.build
HelloAPP/src/: helloapp-window.c  helloapp-window.h  helloapp-window.ui  helloapp.gresource.xml  main.c  meson.build
